--- a/ASD_LAB_12/ASD_LAB_12.csproj
+++ b/ASD_LAB_12/ASD_LAB_12.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Task15.cs" />
+    <Compile Include="Task16.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
